--- a/pentatris.css
+++ b/pentatris.css
@@ -131,7 +131,7 @@ h1, span {
     padding: 8px;
     border: 2px solid rgba(255, 169, 169, 0.5);
     border-radius: 4px;
-    color: white;
+    color: black;
     -webkit-animation: fadeinblur 1s infinite alternate;
     animation: fadeinblur 1s infinite alternate;
 }
